k8s/kustomize/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
        - name: frontend
          image: frontend
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              port: 3000
              path: /
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 60
            failureThreshold: 3
      imagePullSecrets:
        - name: gcr

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: frontend
