k8s/kustomize/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kanjiyomoda-com-ip
    networking.gke.io/managed-certificates: kanjiyomoda-com-cert
spec:
  rules:
    - host: kanjiyomoda.com
    - http:
        paths:
          - path: /*
            backend:
              serviceName: frontend
              servicePort: 3000
